# quizz

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
Diagrams/: EntityRelationDiagramd.drawio  Swimlane.drawio  Use_case_diagram.drawio
UI/: package-lock.json  package.json
UI/src/: main.jsx
UI/src/axios/: api.js
UI/src/components/common/QuizItem/: QuizItem.css  QuizItem.jsx
UI/src/navbar/: Navbar.jsx  navbar.css
UI/src/pages/CreatorUpload/: CreatorUpload.jsx  creatorupload.css
UI/src/pages/CreatorUpload/componetns/: AddQuestion.jsx
UI/src/pages/Home/: Home.jsx  home.css
UI/src/pages/creatorDashboard/: CreatorDashboard.jsx  creatordashboard.css
UI/src/pages/login/: Login.jsx  login.css
UI/src/pages/quiz/: Quiz.jsx  quiz.css
UI/src/pages/userProifle/: UserProfile.jsx  userProfile.css
UI/src/routes/: Router.jsx
UI/src/routes/layout/: BaseLayout.jsx
UI/src/utils/: localStorage.js
migrations/: 20230127110959_create_user_table.sql  20230127181329_create_other_tables.sql  20230128014549_quiz_update.sql
scripts/: init_db.sh
src/: auth.rs  error.rs  lib.rs  main.rs  quiz.rs
tests/: auth.rs  test.rs
youtube_academy_UI/: index.html  package-lock.json  package.json
youtube_academy_UI/src/: App.jsx  main.jsx
youtube_academy_UI/src/pages/CreatorUpload/: CreatorUpload.jsx
youtube_academy_UI/src/pages/login/: Login.jsx  login.css
youtube_academy_UI/src/routes/: Router.jsx
youtube_academy_UI/src/routes/routerModel/: PrivateRoute.jsx
