[package]
name = "axum_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.6"
axum-macros = "0.3"
rust-argon2 = "1"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "macros", "migrate" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }


[dev-dependencies]
axum-test-helper = "0.2.0"
